--- a/main.html
+++ b/main.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Favorite Holiday Destination</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <!-- Heading -->
+    <h1>Paris, France</h1>
+
+    <!-- Line Break -->
+    <br>
+
+    <!-- Paragraph with brief overview -->
+    <p>Paris, the capital of France, is known for its stunning architecture, world-class museums, and rich history. Often referred to as "The City of Light," Paris offers a unique blend of culture, romance, and modernity, making it one of the most popular holiday destinations in the world.</p>
+
+    <!-- Ordered List: Top 5 Attractions -->
+    <h2>Top 5 Attractions in Paris</h2>
+    <ol>
+        <li><strong>Eiffel Tower</strong> - An iconic symbol of Paris and a must-see landmark.</li>
+        <li><em>Louvre Museum</em> - Home to thousands of works of art, including the <strong>Mona Lisa</strong>.</li>
+        <li><strong>Notre-Dame Cathedral</strong> - A stunning example of Gothic architecture.</li>
+        <li><em>Montmartre</em> - A charming district known for its bohemian atmosphere and the <strong>Sacré-Cœur Basilica</strong>.</li>
+        <li><strong>Champs-Élysées</strong> - One of the most famous avenues in the world, lined with theaters, cafés, and shops.</li>
+    </ol>
+
+    <!-- Unordered List: Must-try Foods -->
+    <h2>Must-try Foods in Paris</h2>
+    <ul>
+        <li><strong>Croissant</strong> - A buttery, flaky pastry often enjoyed with coffee.</li>
+        <li><em>Escargot</em> - Snails cooked in garlic butter, a French delicacy.</li>
+        <li><strong>Baguette</strong> - A traditional French loaf of bread, perfect for sandwiches.</li>
+        <li><em>Macarons</em> - Colorful, delicate cookies filled with cream or ganache.</li>
+        <li><strong>Crêpes</strong> - Thin pancakes filled with a variety of sweet or savory fillings.</li>
+    </ul>
 
 </body>
-
 </html>
